--- a/staticAssets/stylesheets/style.css
+++ b/staticAssets/stylesheets/style.css
@@ -1,56 +1,86 @@
-body {
+body, html{
 	width: 100%;
 	height: 100%;
 	margin: 0 0 0 0;
-	overflow: hidden;
-	background-color: #c0c1b5;
+	font-size: 16px;
 }
 
-html {
-	background-color: #c0c1b5;
+::-webkit-scrollbar {
+    display: none;
 }
 
-p{
+button{
+	background-color: #f44336;
+	border: none;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	text-decoration: none;
+}
+button:focus {
+	outline:0;
+}
+
+#search{
+	width: 33%;
 	text-align: center;
-	font-family: 'Helvetica';
-	font-size: 50px;	
-	color: white;
+}
+input{
+	margin-top: 12%;
+	width: 90%;
+	line-height: 30px;
+	font-size: 1.8em;
+}
+input:focus {
+	outline: 0;
+}
+::-webkit-input-placeholder{
+	/*text-align: center;*/
 }
 
-#marker {
-	padding-top: 20px;
-	color: black;
-	margin: 0 auto;
-	width: 1px;
-	height: 10px;
+.selected{
+	border: 10px solid black;
 }
 
-#images{
-	margin-top:10%;
-	height: 200px;
-	width: 10000000px;
+#header{
+	background-color: turquoise;
+	width: 100%;
+	height: 20%;
 }
 
-#globesvg{
+#container{
+	background-color: pink;
+	display: flex;
+	align-items: center;
+	height: 64%;
+}
+#fences{
+	background-color: blue;
+	white-space: nowrap;
+	overflow-x: auto;
+	overflow-y:hidden;
+}
+#menu{
+	background-color: green;
+	width: 100%;
+	height: 16%;
+}
+#controls{
+	text-align: center;
+}
+.image{
+	background-color: yellow;
+	height: 60px;
+	width: 120px;
 	display: inline-block;
-	height: 100px;
-	width: 200px;
+	margin-right: 2px;
+	margin-bottom: 2px;
+	box-sizing: border-box;
+	cursor:  url(/staticAssets/images/cursor1.png)60 0, auto;
 }
 
-#globe {
-	margin: 0 auto;
-	height: 100px;
-	width: 200px;
-}
-
-.graticule {
-  fill: white;
-}
-
-.land {
-  fill: white;
-}
-
-.boundary {
-  fill: white;
+@media (max-width: 770px) {
+  #menu {
+    display: none;
+  }
 }
