--- a/staticAssets/stylesheets/style.css
+++ b/staticAssets/stylesheets/style.css
@@ -1,82 +1,103 @@
+@font-face { font-family: ProductSansR; src: url('/stylesheets/ProductSansReg.ttf'); }
+
 body, html{
 	width: 100%;
 	height: 100%;
 	margin: 0 0 0 0;
 	font-size: 16px;
+	background-color: #B2B2B2;
+	color: white;
+	font-family: 'ProductSansR';
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
+#header{
+	width: 100%;
+	height: 20%;
+	display: flex;
+	align-items: center;
+	position: fixed;
+	left:0;
+	top: 0;
+	padding: 0 2.5em;
+}
+
+#title {
+	font-size: 1.8em;
+	margin: 0 0.5em;
+}
+
 button{
-	background-color: #f44336;
-	border: none;
-	border-radius: 50%;
-	width: 30px;
-	height: 30px;
+	font-size: 1em;
+	margin: 0 0.1em;
+	background-color: white;
+	width: 1.5em;
+	height: 1.5em;
 	text-decoration: none;
+	border-style: none;
+	color: #B2B2B2;
+	font-weight: bold;
+	text-align: center;
 }
 button:focus {
 	outline:0;
 }
 
-#search{
-	width: 33%;
-	text-align: center;
-}
 input{
-	margin-top: 12%;
-	width: 90%;
-	line-height: 30px;
-	font-size: 1.8em;
+	font-size: 1em;
+	line-height: 1.5em;
+	width: 20%;
+	margin: 0 0.5em;
 }
 input:focus {
 	outline: 0;
 }
-::-webkit-input-placeholder{
-	/*text-align: center;*/
-}
 
 .selected{
-	border: 10px solid black;
+	/*border: 10px solid black;*/
+	width: 20em;
+	height: 10em;
+	-webkit-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+	-moz-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+	box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+	padding-bottom: -1%;
 }
 
-#header{
-	background-color: turquoise;
-	width: 100%;
-	height: 20%;
-}
 
 #container{
-	background-color: pink;
+	height: 100%;
+	background-color: #B2B2B2;
 	display: flex;
 	align-items: center;
-	height: 64%;
 }
 #fences{
-	background-color: blue;
+	width: 100%;
 	white-space: nowrap;
 	overflow-x: auto;
 	overflow-y:hidden;
 }
-#menu{
-	background-color: green;
-	width: 100%;
-	height: 16%;
-}
-#controls{
-	text-align: center;
-}
-.image{
-	background-color: yellow;
-	height: 60px;
-	width: 120px;
+
+img{
+	max-width: 20%;
+	padding-bottom: 10%;
 	display: inline-block;
-	margin-right: 2px;
-	margin-bottom: 2px;
 	box-sizing: border-box;
-	cursor:  url(/staticAssets/images/cursor1.png)60 0, auto;
+	/*cursor:  url(/images/cursor1.png)60 0, auto;
+	*/
+}
+
+#about{
+	background-color: #FF1919;
+	width: 100%;
+	height: 6%;
+	text-align: center;
+	font-size: 1.3em;
+	position: fixed;
+	left:0;
+	bottom: 0;
 }
 
 @media (max-width: 770px) {
@@ -84,3 +105,22 @@ input:focus {
     display: none;
   }
 }
+
+body{
+  background-color:gray;
+}
+div{
+  height: 100px;
+  width: 100px;
+  background-color: blue;
+  display: inline-block;
+}
+
+/*#two{
+  height:120px;
+  width:120px;
+  margin-bottom: -10px;
+  -webkit-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+-moz-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
+}*/
