--- a/staticAssets/stylesheets/style.css
+++ b/staticAssets/stylesheets/style.css
@@ -57,13 +57,10 @@ input:focus {
 }
 
 .selected{
-	/*border: 10px solid black;*/
-	width: 20em;
-	height: 10em;
-	-webkit-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
-	-moz-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
-	box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
-	padding-bottom: -1%;
+	width: 25%;
+	margin-bottom: -2%;
+	margin-right: 3px;
+	margin-left: 3px;
 }
 
 
@@ -81,18 +78,19 @@ input:focus {
 }
 
 img{
-	max-width: 20%;
-	padding-bottom: 10%;
+	width: 20%;
 	display: inline-block;
 	box-sizing: border-box;
 	/*cursor:  url(/images/cursor1.png)60 0, auto;
 	*/
+	-webkit-transform: translateZ(0);
+	-webkit-transform: translate3d(0,0,0);
 }
 
 #about{
 	background-color: #FF1919;
 	width: 100%;
-	height: 6%;
+	height: 5%;
 	text-align: center;
 	font-size: 1.3em;
 	position: fixed;
@@ -100,27 +98,14 @@ img{
 	bottom: 0;
 }
 
+#loader{
+	margin-left: 50%;
+	height: 30px;
+	width: 30px;
+}
+
 @media (max-width: 770px) {
   #menu {
     display: none;
   }
 }
-
-body{
-  background-color:gray;
-}
-div{
-  height: 100px;
-  width: 100px;
-  background-color: blue;
-  display: inline-block;
-}
-
-/*#two{
-  height:120px;
-  width:120px;
-  margin-bottom: -10px;
-  -webkit-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
--moz-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
-box-shadow: 5px 0px 136px -11px rgba(247,239,247,0.55);
-}*/
