--- a/staticAssets/stylesheets/style.css
+++ b/staticAssets/stylesheets/style.css
@@ -7,6 +7,7 @@ body, html{
 	font-size: 25px;
 	color: black;
 	font-family: 'ProductSansR';
+	overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -27,7 +28,7 @@ body, html{
 #title {
 	font-size: 1.2em;
 	position: fixed;
-	top: 5em;
+	top: 4em;
 	left: calc(50% - 6.2em);
 }
 
@@ -40,7 +41,7 @@ body, html{
 	width: 4em;
 	height:1em;
 	position: fixed;
-	bottom: 6.2em;
+	bottom: 5em;
 	left: calc(50% - 2em);
 }
 
@@ -48,7 +49,8 @@ body, html{
 input[type="text"]{
 	font-size: 1em;
 	line-height: 1.5em;
-	width: 20%;
+	height: 20px;
+	width: 50px;
 	margin: 0 0.5em;
 	border: 1px solid black;
 }
@@ -80,13 +82,23 @@ input:focus {
 	padding-top: 10px;
 }
 
-img:not(#marker):not(#loader){
+img:not(#marker):not(#loader):not(#add):not(#sub){
 	width: 20%;
 	display: inline-block;
 	box-sizing: border-box;
 	cursor: url(/images/cursor.png)60 0, auto;
 	-webkit-transform: translateZ(0);
 	-webkit-transform: translate3d(0,0,0);
+}
+
+#add{
+	height: 20px;
+	width: 20px;
+}
+
+#sub{
+	width: 20px;
+	padding-bottom: 5px;
 }
 
 #about{
